# OpenGLGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  OpenGLGame.cpp  OpenGLGame.h  PreBuildOpenAL.bat
OGLGAME/: bone.vert  main.frag  main.shader.json  main.vert  test.mat.json
extinclude/glad/: glad.h
extsrc/: glad.c
src/: client.cpp  client.h  file_system.cpp  file_system.h  gl_debug.cpp  gl_debug.h  input_system.cpp  input_system.h  inputs.cpp  inputs.h  logger.cpp  logger.h  logging.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  type_cache.cpp  type_cache.h  type_hierarchy.cpp  type_hierarchy.h  vgassert.h
src/components/: model_filter.cpp  model_filter.h  player.cpp  player.h  transform.cpp  transform.h
src/ecs/: entity_component.cpp  entity_component.h  game_object.cpp  game_object.h
src/entity/: entity.h  player.cpp  player.h  render_test.cpp  render_test.h
src/entity/interface/: renderable.cpp  renderable.h
src/exception/: file_open_ex.cpp  file_open_ex.h
src/resource/: material.cpp  material.h  model.cpp  model.h  resource_system.cpp  resource_system.h  shader.cpp  shader.h  texture.cpp  texture.h
